# numeths

./: .gitignore  Assignment-Numerical_Integration_Methods.md  Assignment-Root_Finding_Methods.md  Assignment-System_of_Equations_Methods.md  BisectionMethod.cpp  BisectionMethod.h  CMakeLists.txt  Iteration.cpp  Iteration.h  NewtonRaphsonMethod.cpp  NewtonRaphsonMethod.h  README.md  RegulaFalsiMethod.cpp  RegulaFalsiMethod.h  RootFindingMethod.cpp  RootFindingMethod.h  SecantMethod.cpp  SecantMethod.h  armadillo.cpp  bisection.cpp  cubic_spline.cpp  gauss_elimination.cpp  gauss_elimination_pivot.cpp  gauss_jacobi  gauss_jacobi.cpp  gauss_seidel  gauss_seidel.cpp  index.html  lu_decomposition.cpp  main.cpp  matrix.txt  newton_raphson.cpp  regula_falsi.cpp  secant.cpp
Assignments/: Assignment-Root_Finding_Methods.html  Assignment-System_of_Equations_Methods.md
